# Cloakroom

./: .gitignore  HANDOFF.md  HANDOFF_B.md  HANDOFF_B_STATUS.md  INSTALL.md  PERFORMANCE.md  PERFORMANCE_BOTTLENECK_TECHNICAL_REPORT.md  PILOT_KICKOFF.md  PILOT_QUICKSTART.md  PRD_HANDOFF_B.md  STATUS.md  TROUBLESHOOTING.md  WRAPPER_ARCHITECTURE_ADDENDUM.md  pyproject.toml
.github/workflows/: ci.yml  demo-acceptance.yml  ec15-gate.yml  performance-gate.yml  security-scan.yml  weekly-trust-gate.yml
docs/: Cloakroom_Current_State_and_Gaps.md  Cloakroom_Demo_Runbook.md  Cloakroom_Killer_Demo_PRD.md  Cloakroom_Master_PRD.md  Cloakroom_Status_Testing_and_Release_Gates.md  Demo_Setup_Guide.md
scripts/: demo_browser_acceptance.mjs  demo_walkthrough.py
src/cloakroom/: __init__.py  cli.py  exceptions.py  licensing.py  models.py
src/cowork_shield/: __init__.py  cli.py  exceptions.py  licensing.py  models.py
tests/: conftest.py  test_cli.py  test_exceptions.py  test_licensing.py  test_models.py
tests/fixtures/: sample_contacts.xlsx  sample_data.csv  sample_financial.xlsx.backup  sample_report.docx  sample_with_tables.docx
tests/test_clipboard/: test_operations.py
tests/test_demo/: test_customer_escalation.py
tests/test_demo_server/: test_app.py
tests/test_detection/: test_demo_rules.py  test_engine.py
tests/test_extractors/: test_pdf_markdown.py
tests/test_governance/: test_reporting.py
tests/test_hallucination/: test_detector.py
tests/test_handlers/: test_column_select.py  test_csv.py  test_docx.py  test_pdf_handler.py  test_pii_prefilter.py  test_text_handler.py  test_xlsx.py
tests/test_ipc/: test_framing.py  test_protocol.py  test_server.py  test_stdio_server.py
tests/test_logging/: test_observability.py
tests/test_pipeline/: test_anonymize.py  test_anonymize_invariants.py  test_columns.py  test_restore.py  test_restore_hallucination.py  test_restore_hallucination_pdf_hebrew.py
tests/test_state_integrity/: __init__.py  test_ec15_state_integrity.py
tests/test_tokenizer/: test_generator.py  test_replacer.py
tests/test_ui/: __init__.py  test_gradio_app.py  test_pipeline_ui_api.py
tests/test_vault/: test_crypto.py  test_keychain_security.py  test_migration.py  test_recovery.py  test_vault.py
tests/test_verification/: test_verifier.py
tests/test_workspace/: test_manager_governance.py
wrapper/CloakroomWrapper/: Package.swift
(+135 files in other folders)
