[project]
name = "cloakroom"
version = "0.2.0"
description = "Reversible document anonymization for safe LLM usage"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    "click>=8.1.0",
    "presidio-analyzer>=2.2.0",
    "spacy>=3.7.0,<3.8.0",
    "numpy<2.0.0",
    "langdetect>=1.0.9",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "pymupdf>=1.24.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "rich>=13.0.0",
    "textual>=0.78.0",
    "gradio>=5.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
hebrew_advanced = [
    "stanza>=1.10.0",
    "transformers>=4.48.0",
    "spacy-huggingface-pipelines>=0.0.4",
]
pdf_docling = [
    "docling>=2.0.0",
]

[project.scripts]
cloakroom = "cloakroom.cli:main"
cloakroom-tui = "cloakroom.tui.app:run"
cloakroom-gradio = "cloakroom.ui.gradio_app:launch"
cloakroom-ipc = "cloakroom.ipc.server:main"
cloakroom-ipc-stdio = "cloakroom.ipc.stdio_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloakroom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
